server/vm-k8s/k8s/base/gitlab-ci-pipelines-exporter/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ci-pipelines-exporter
spec:
  selector:
    app: gitlab-ci-pipelines-exporter
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
