server/vm-k8s/k8s/base/gitlab-ci-pipelines-exporter/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ci-pipelines-exporter
spec:
  rules:
  - host: "gitlab-ci-pipelines-exporter.10.0.2.15.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-ci-pipelines-exporter
            port:
              number: 80
  ingressClassName: public
